--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+cachelib==0.4.1
 click==8.0.3
 dnspython==2.1.0
 email-validator==1.1.3
 Flask==2.0.2
 Flask-Login==0.5.0
+Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 idna==3.3
@@ -13,3 +15,4 @@ passlib==1.7.4
 SQLAlchemy==1.4.28
 Werkzeug==2.0.2
 WTForms==3.0.0
+WTForms-SQLAlchemy==0.3
