--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,10 @@ idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+mysql-connector-python==8.0.27
+mysqlclient==2.1.0
 passlib==1.7.4
+protobuf==3.19.3
 SQLAlchemy==1.4.28
 Werkzeug==2.0.2
 WTForms==3.0.0
